trunk/Archive2/3d/15f24e90bb13ed/output
main.cpp:7:1: error: expected expression
template<class T> using raw_ptr = T*; 
^
main.cpp:8:1: error: use of undeclared identifier 'ptr'
ptr<int> x;
^
main.cpp:8:8: error: expected '(' for function-style cast or type construction
ptr<int> x;
    ~~~^
main.cpp:8:10: error: use of undeclared identifier 'x'
ptr<int> x;
         ^
4 errors generated.
