trunk/Archive2/3d/15f24e90bb13ed/main.cpp
#include <iostream>
#include <string>
#include <vector>

int main()
{
template<class T> using raw_ptr = T*; 
ptr<int> x;
}
